--- a/CatNews/Base.lproj/LaunchScreen.storyboard
+++ b/CatNews/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CatIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BsD-Ey-eT6">
+                                <rect key="frame" x="157" y="398" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="TjL-jh-XDz"/>
+                                    <constraint firstAttribute="width" constant="100" id="W94-i8-Fe0"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="AccentColor"/>
+                        <constraints>
+                            <constraint firstItem="BsD-Ey-eT6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="9fy-vE-TKm"/>
+                            <constraint firstItem="BsD-Ey-eT6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="SKJ-F1-rFZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,8 +38,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CatIcon" width="100" height="100"/>
         <namedColor name="AccentColor">
-            <color red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20399999618530273" green="0.59600001573562622" blue="0.85900002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
